--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 example_src/*
 !example_src/*.tex
 !example_src/fig/
+# Ignore output files
+/example/**/*.csv
+# Ignore Python cache files
+__pycache__/
